        we do not recommend using patchless RHEL4 clients with kernels
        prior to 2.6.9-55EL (RHEL4U5).
       * Recommended e2fsprogs version: 1.40.7-sun1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : normal
Bugzilla   : 12652
Description: Add FMODE_EXEC to SLES10 SP1 series.

Severity   : enhancement
Bugzilla   : 13397
Description: Add server support for vanilla-2.6.22.14.

Severity   : normal
Bugzilla   : 13375
Descriptoin: make lov_create() will not stuck in obd_statfs_rqset()
Details    : If an OST is down the MDS will hang indefinitely in
             obd_statfs_rqset() waiting for the statfs data. While for
             MDS QOS usage of statfs, it should not stuck in waiting.

Severity   : normal
Bugzilla   : 3055
Description: Disable adaptive timeouts by default

Severity   : major
Bugzilla   : 15027
Frequency  : on network error
Description: panic with double free request if network error 
Details    : mdc_finish_enqueue is finish request if any network error occuring,
	     but it's true only for synchronus enqueue, for async enqueue 
	     (via ptlrpcd) this incorrect and ptlrpcd want finish request
	     himself.

Severity   : normal
Bugzilla   : 14533
Frequency  : rare, on recovery
Description: read procfs can produce deadlock in some situation
Details    : Holding lprocfs lock with send rpc can produce block for destroy
	     obd objects and this also block reconnect with -EALREADY. This isn't
	     fix all lprocfs bugs - but make it rare.

Severity   : enhancement
Bugzilla   : 15152
Description: Update kernel to RHEL5 2.6.18-53.1.14.el5.

Severity   : major
Frequency  : frequent on X2 node
Bugzilla   : 15010
Description: mdc_set_open_replay_data LBUG
Details    : Set replay data for requests that are eligible for replay.

Severity   : normal
Bugzilla   : 14321