@@ -18,6 +18,13 @@ tbd  Sun Microsystems, Inc.
        * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
         removed cwd "./" (refer to Bugzilla 14399).
 
+Severity   : minor
+Bugzilla   : 15210
+Frequency  : rare, on shutdown
+Description: race process ast vs remove callback
+Details    : removing callback before disconnect import open race with processing
+             callback.
+
 Severity   : normal
 Bugzilla   : 12652
 Description: Add FMODE_EXEC to SLES10 SP1 series.
